# composer-galaxy

./: .gitignore  CONTRIBUTING.md  README.md  build.py  pyproject.toml  thin_composers.txt
app/: backfill_dates.py  composers_pool.py  extract.py  graph.py  grove.py  main.py  seed.py  validate.py  wiki_list.py  wikipedia.py
composers/: 1925.md  aaron-copland.md  adelina-de-lara.md  adolf-bernhard-marx.md  adolphe-gutmann.md  adolphus-hailstork.md  agathe-backer-gr-ndahl.md  akira-ifukube.md  alan-hovhaness.md  alban-berg.md  albert-becker.md  albert-dietrich.md  albert-lavignac.md  albert-roussel.md  albert-schweitzer.md  alberto-ginastera.md  aldo-clementi.md  alessandro-scarlatti.md  alexander-borodin.md  alexander-goehr.md  alexander-scriabin.md  alexander-siloti.md  alexander-tcherepnin.md  alexander-von-zemlinsky.md  alexis-roland-manuel.md  alfred-bruneau.md  alfred-schnittke.md  alfredo-casella.md  alma-mahler.md  alois-h-ba.md  alvin-singleton.md  am-lie-julie-candeille.md  amadeo-rold-n.md  amanda-r-ntgen-maier.md  ambroise-thomas.md  amy-beach.md  andr-gedalge.md  andr-messager.md  anna-s-orvaldsd-ttir.md  annette-von-droste-h-lshoff.md  (+518 more)
data/: Wiki info.csv  Wiki info.numbers  compiled.json  composers.json  edges.json  grove_articles.json  grovemusic_sitelevel.mrc  omo_all.mrc  omo_companionmusic.mrc  omo_dictionarymusic.mrc  query (1).csv  report.txt  schema.json  wikidata_query.sparql
scripts/: add_corroboration.py  add_grove_article.py  canonicalize.py  compile.py  fix_reciprocals.py  migrate_provenance.py  wikidata_backfill.py
web/: graph.json  (+1 more)
(+1 files in other folders)
