[project]
name = "composer-galaxy"
version = "0.1.0"
description = "Local graph app for exploring classical composer lineages and influences."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pymarc>=5.3.1",
    "google-genai>=2.0.0",
]
